fix: update z-index search overlay

--- a/app/src/app/components/navbar/navbar.scss
+++ b/app/src/app/components/navbar/navbar.scss
@@ -25,14 +25,14 @@
     opacity: 1;
     visibility: visible;
     overflow: hidden;
-    z-index: 1;
+    z-index: 2;
   }
 
   &.active-static {
-    top: 64px; // Height of the navbar
+    top: 64px;
     opacity: 1;
     visibility: visible;
     overflow: hidden;
-    z-index: 1;
+    z-index: 2;
   }
 }
